fixed hamburger icon on tablet and ran build

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,8 @@ body {
   width: 100vw;
 }
 
-html,
-body,
-#root {
-  height: 100%;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
