--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* --------------------------------------HEADER CODE-------------------------------------------- */
 header {
   justify-content: center;
@@ -27,9 +33,8 @@ nav h1 {
 
 nav h1 .icon {
   color: wheat;
-  font-size: 80%;
-  padding-left: 5%;
-  padding-right: 0;
+  font-size: 25px;
+  margin-left: 10px;
   cursor: pointer;
 }
 
@@ -87,11 +92,7 @@ nav ul li a:hover {
   }
 
   nav h1 .icon {
-    color: wheat;
-    font-size: 80%;
-    padding-left: 5%;
-    padding-right: 0;
-    cursor: pointer;
+    font-size: 30px;
   }
 }
 @media (min-width: 1020px) {
